--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "afsakar/filament-otp-login": "^1.2",
         "filament/filament": "*",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "resend/resend-laravel": "^0.11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
