feature: se agregaron gráficas en el dashboard, Total de órdenes y Monto total de órdenes por mes

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "afsakar/filament-otp-login": "^1.2",
         "filament/filament": "*",
+        "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
